Add update api for multi choice questions
